# Data-Janitor-ENV

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  grader.py  grader_easy.py  grader_hard.py  grader_medium.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
data/: easy_messy.csv  hard_messy.csv  medium_messy.csv
openenv_data_janitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  data_janitor_environment.py
