[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data_janitor"
version = "0.1.0"
description = "Data Janitor environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.3.0",
    "tabulate>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "data_janitor.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["data_janitor", "data_janitor.server"]
package-dir = { "data_janitor" = ".", "data_janitor.server" = "server" }